--- a/Blog/templates/Blog/article_view.html
+++ b/Blog/templates/Blog/article_view.html
@@ -480,7 +480,7 @@
   <div class="article-container">
     <div class="article-header">
       {% if user.is_authenticated %}
-      <a href="{% url 'update_article' article.id %}" class="Button-update">Update Article</a>
+      <a href="{% url 'update_article' article.id %}" class="Button-update">Update/Delete Article</a>
       {% endif %}
       <h1>{{ article.title }}</h1>
       <hr>
@@ -493,8 +493,6 @@
           {{platform.name}} |
           {% endfor %}
       </div>
-       
-
       </div>
     </div>
     
