--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -278,6 +278,9 @@
     font-size: 28px;
     margin: 0;
   }
+  .bloc-icon {
+    text-decoration: none !important;
+  }
     </style>
     {% block head %}
     {% endblock %}
@@ -297,7 +300,7 @@
             <a href="{% url 'guides' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fa-solid fa-book"></i><span>Guide</span>
             </a>
-            <a href="{% url 'game_view' %}" class="bloc-icon" onclick="changeColor(this)">
+            <a href="{% url 'top_games' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fa-solid fa-trophy"></i><span>Top Games</span>
             </a>
             <a href="{% url 'pc_view' %}" class="bloc-icon" onclick="changeColor(this)">
@@ -325,7 +328,7 @@
                     <a href="">Profile</a>
                     <a href="">Settings</a>
                     <a href="{% url 'add_article' %}">Add Article</a>
-                    <a href="{% url 'add_game' %}">Add Game</a>
+                  
                     <a href="{% url 'logout_user' %}">Logout</a>
                 </div>
             </div>
@@ -353,7 +356,7 @@
       <i class="fas fa-newspaper"></i>
       <span>News</span>
   </a>
-  <a href="#" class="bloc-icon" onclick="changeColor(this)">
+  <a href="{% url 'reviews' %}" class="bloc-icon" onclick="changeColor(this)">
       <i class="fas fa-star"></i>
       <span>Reviews</span>
   </a>
