--- a/Blog/templates/Blog/top_games.html
+++ b/Blog/templates/Blog/top_games.html
@@ -169,7 +169,7 @@
 
  
 <div class="header-news">
-  <h1>Game Bits Reviews</h1>
+  <h1>Game Bits Top Games</h1>
 </div>
 
 
@@ -223,12 +223,7 @@
     </div>
     <div class="list-articles">
       <h2 class="section-title">Latest</h2>
-      {% for article in object_list %}
-      <div>
-        <h3>{{ article.title }}</h3>
-        <p>{{ article.date_posted }}</p>
-      </div>
-      {% endfor %}
+      
     </div>
     <div class="list-articles">
       <h2 class="section-title">Reviews</h2>
